--- a/flask_tutorial.ipynb
+++ b/flask_tutorial.ipynb
@@ -1468,8 +1468,7 @@
     "Pour déployer:\n",
     "- Créez une ressource azure services (app services)\n",
     "    - Runtimestack: python 3.9\n",
-    "    - App Services plan (utiliser un gratuit dans Dev/test)\n",
-    "- Dans development center, choisissez comme source Github et faite le lien vers votre répertoire contenant l'app"
+    "    - App Services plan (utiliser un gratuit dans Dev/test)"
    ]
   },
   {
@@ -1477,7 +1476,7 @@
    "metadata": {},
    "source": [
     "Règles à vérifier sur votre répertoire pour que le deploiement fonctionne:\n",
-    "- Votre application doit être lancée depuis un fichier qui s'appelle app.py et votre application doit d'appeler app\n",
+    "- Votre application doit être lancée depuis un fichier qui s'appelle app.py et votre application doit s'appeler app\n",
     "- Si vous faites une application basique assurez vous qu'au moins les endpoints renvoient du html et non de simple chaines de caractère \n",
     "    - @app.route(\"/\") def home(): return \"hello\" ne marche pas\n",
     "- Ce n'est pas toujours obligatoire mais pour que ça marche chez moi j'ai du préciser le host et le port et faire en sorte qu'il correspond à ce qu'écoute le conteneur\n",
