--- a/flask_tutorial.ipynb
+++ b/flask_tutorial.ipynb
@@ -846,7 +846,9 @@
     "        ))\n",
     "    db.session.commit()\n",
     "    lg.warning('Database initialized!')\n",
-    "\n"
+    "\n",
+    "## to initiate:\n",
+    "## FLASK_APP=app.py flask init_db\n"
    ]
   },
   {
